add tasbih page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  shared_preferences: ^2.0.15
   cupertino_icons: ^1.0.4
   google_fonts: ^3.0.1
   equatable: ^2.0.3
