--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   equatable: ^2.0.3
   dartz: ^0.10.1
   http: ^0.13.4
+  flutter_bloc: ^8.0.1
+  get_it: ^7.2.0
+  flutter_html: ^3.0.0-alpha.3
 
 dev_dependencies:
   flutter_test:
@@ -37,3 +40,6 @@ flutter:
     - family: At-Tupats
       fonts:
         - asset: assets/fonts/at-tupats.otf
+    - family: Ramadhani
+      fonts:
+        - asset: assets/fonts/ramadhani.otf
