--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   get_it: ^7.2.0
   flutter_html: ^3.0.0-alpha.3
+  sqflite: ^2.0.2+1
+  path: ^1.8.1
 
 dev_dependencies:
   flutter_test:
