--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   sqflite: ^2.0.2+1
   path: ^1.8.1
   encrypt: ^5.0.1
+  sqflite_sqlcipher: ^2.1.1
 
 dev_dependencies:
   flutter_test:
