--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,14 @@ dependencies:
   path: ^1.8.1
   encrypt: ^5.0.1
   sqflite_sqlcipher: ^2.1.1
+  intl: ^0.17.0
+  geolocator: ^8.2.1
+  geocoding: ^2.0.4
+  awesome_notifications: ^0.6.21
+  get_storage: ^2.0.3
+  slide_countdown:
+    git:
+      url: https://github.com/degalih/slide_countdown
 
 dev_dependencies:
   flutter_test:
