--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,11 @@ dependencies:
   encrypt: ^5.0.1
   sqflite_sqlcipher: ^2.1.1
   intl: ^0.17.0
-  geolocator: ^8.2.1
+  geolocator: ^7.6.0
   geocoding: ^2.0.4
   awesome_notifications: ^0.6.21
   get_storage: ^2.0.3
+  flutter_qiblah: ^2.0.2
   slide_countdown:
     git:
       url: https://github.com/degalih/slide_countdown
