--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   awesome_notifications: ^0.6.21
   get_storage: ^2.0.3
   flutter_qiblah: ^2.0.2
+  vibration: ^1.7.4-nullsafety.0
   slide_countdown:
     git:
       url: https://github.com/degalih/slide_countdown
